test_suite/alan-2022-examples/failing/008200_mutation.alan
source _ function J0() begin relax end > begin relax end
